<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.Function.buyItemFragment.BuyItemFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:id="@+id/line1"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_buy_name"
            android:id="@+id/tv_name"

            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:id="@+id/line2"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/edittext_buy_location"
            android:id="@+id/tv_time"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:layout_marginTop="10dp"
        android:id="@+id/line3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_buy_phone_no"
            android:id="@+id/tv_special_requirements"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="2dp"
        android:backgroundTint="#5084DE"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Go to payment"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:id="@+id/btn_payment"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>




</LinearLayout>