<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".ui.Function.meetingTheExpert.ExpertMeetingFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:id="@+id/line1"
        android:layout_marginTop="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_location"
            android:id="@+id/tv_location"

            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:id="@+id/line2"
        android:layout_marginTop="5dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/edittext_time"
            android:id="@+id/tv_time"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:layout_marginTop="5dp"
        android:id="@+id/line3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_special_requirements"
            android:id="@+id/tv_special_requirements"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick a date:"

        android:fontFamily="@font/roboto"
        android:textSize="16sp"/>

    <ProgressBar
        android:id="@+id/spin_kit"
        android:layout_marginTop="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>




    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="2dp"
        android:backgroundTint="#5084DE"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="Book an appointment"
        android:gravity="center"
        android:id="@+id/singin"
        android:textColor="#FAFAFA"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

</LinearLayout>