<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="none"
    android:id="@+id/parent_layout"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.Function.buyItemFragment.BuyItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">




    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:id="@+id/line1"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_buy_name"
            android:id="@+id/tv_name"

            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:id="@+id/line2"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/edittext_product_price"
            android:id="@+id/tv_price"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:layout_marginTop="10dp"
        android:id="@+id/line3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_product_description"
            android:id="@+id/tv_description"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/editTextStyle"
        android:layout_marginTop="10dp"
        android:id="@+id/line4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/edittext_stock"
            android:id="@+id/tv_stock"
            android:layout_height="40dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/iv_equipments_image"
        android:src="@drawable/agtech"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="2dp"
            android:backgroundTint="#5084DE"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="Add an image"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:id="@+id/image_btn"
            android:textColor="#FAFAFA"
            android:textSize="14sp"
            android:padding="0dp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="2dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:backgroundTint="#5084DE"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="Lend"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:id="@+id/btn_upload"
            android:textColor="#FAFAFA"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />


    </RelativeLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"/>

    </LinearLayout>


</ScrollView>